--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
 <br>
 2. If you are in urgent need of any accesory during this critical COVID-19 situation.
 Fill the form with Required as an option in the form.
-<br>3. If some people are there to help with any accesory or the accesory is available with them can fill the form with Available as an option in the form.
+<br>3. If some people are there to help with any accessory or the accesory is available with them can fill the form with Available as an option in the form.
 <br>
 The service here is free of cost without any kind of fees.
 <br>
@@ -223,7 +223,7 @@ The service here is free of cost without any kind of fees.
                             </div>
                                <!-- city -->
                              <div class="form-group"><label for="id_query">Describe your Location</label><span class="required-input">*</span><textarea class="form-control" id="id_questioncity" name="question" placeholder="Please Describe Your location Here , with landmark and other informational details! " rows="3" maxlength="5000" required></textarea></div>
-                            <div class="form-group"><label for="id_query">Description</label><span class="required-input">*</span><textarea class="form-control" id="id_question" name="question" placeholder="Please Describe Situational infromation here " rows="5" maxlength="5000" required></textarea></div>
+                            <div class="form-group"><label for="id_query">Description</label><span class="required-input">*</span><textarea class="form-control" id="id_question" name="question" placeholder="Please Describe situation information here " rows="5" maxlength="5000" required></textarea></div>
                             <!-- resource -->
                             <div class="form-group">
                                 <label for="id_course">Resource:</label><span class="required-input">*(Required)</span>
@@ -254,7 +254,7 @@ The service here is free of cost without any kind of fees.
 						<div class="thank-you-pop" style="text-align: center ;display: block;margin-left: auto">
 							<img src="https://cdn.iconscout.com/icon/free/png-64/namaste-hand-2358669-1975261.png" alt="">
 							<h1>Thank You!</h1>
-							<p>Your submission is received and we will contact you soon </p>
+							<p>Your submission is received. We will contact you through mail soon.\nPlease check your mailbox regularly.</p>
               <p>STAY HOME - STAY SAFE !</p>
 
 
