--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ The service here is free of cost without any kind of fees.
 						<div class="thank-you-pop" style="text-align: center ;display: block;margin-left: auto">
 							<img src="https://cdn.iconscout.com/icon/free/png-64/namaste-hand-2358669-1975261.png" alt="">
 							<h1>Thank You!</h1>
-							<p>Your submission is received. We will contact you through mail soon.\nPlease check your mailbox regularly.</p>
+							<p>Your submission is received. We will contact you through mail soon.<br>Please check your mailbox regularly.</p>
               <p>STAY HOME - STAY SAFE !</p>
 
 
