--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ e.preventDefault();
 
         if(document.getElementById("id_name").value &&
         document.getElementById('id_email').value &&
-        (document.getElementById('id_phoneno').value.length >= 6000000000 && document.getElementById('id_phoneno').value.length <= 9999999999 ) &&   document.getElementById('id_question').value &&
+        (parseInt(document.getElementById('id_phoneno').value, 10) >= 6000000000 && parseInt(document.getElementById('id_phoneno').value, 10) <= 9999999999 ) &&   document.getElementById('id_question').value &&
           document.getElementById('id_questioncity').value){
             console.log(JSON.stringify({
                     name:document.getElementById("id_name").value,
