--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ The service here is free of cost without any kind of fees.
                             </div>
                             <div class="form-group"><label for="id_phoneno">Phone Number</label><span class="required-input">*(Required)</span>
                                 <div class="input-group">
-                                    <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-phone"></i></span></div><input class="form-control" type="number" id="id_phoneno" name="phoneno" required placeholder="Primary Phone" min="6000000000" maxlength"10" ></div>
+                                    <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-phone"></i></span></div><input class="form-control" type="number" id="id_phoneno" name="phoneno" required placeholder="Primary Phone" min="6000000000" max"9999999999" ></div>
                             </div>
                              <!-- city -->
                             <div class="form-group"><label for="id_phoneno">City</label><span class="required-input">*(Required)</span>
