--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@ The service here is free of cost without any kind of fees.
                                             <option id="resource_option" value="Oxygen Cylinder">Oxygen Cylinder</option>
                                             <option id="resource_option" value="ICU Bed">ICU Bed</option>
                                             <option id="resource_option" value="Ventilator">Ventilator</option>
+					    <option id="resource_option" value="Oxygen Concentrator">Oxygen Concentrator</option>
                                             <option id="resource_option" value="Others">Others</option>
                                         </select>
                                     </div>
