--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             <div class="container-fluid">
 		    
 		    <div class="info">
-                       <br><strong>Note :- </strong> person cannot donate blood for the next 28 days after taking the last dose of COVID-19 vaccine.<br>
+                       <br><strong>Note :- </strong> Person cannot donate blood for the next 28 days after taking the last dose of COVID-19 vaccine.<br>
                      </div>
 		    
                 <h1 class="text-center" style="margin-top: 40px;margin-bottom: 40px;">Covid-19 HelpDesk</h1>
