--- a/index.html
+++ b/index.html
@@ -287,6 +287,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
                        </div>
                     </div>
                 </form>
+		
+		 <div class="info">
+                       Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries
+                     </div>
             </div>
         </div>
             <!-- End: Full Page Form -->
