--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,10,151,1) 0%, rgb
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(63, 70, 107) 100%); padding: 20px; padding-top: 40px">
 <div class="container card wow slideInUp" style=" border-radius: 1%">
         <!-- Start: Contact Form v2 (Modal & Full) with Google Map -->
-        <div style="margin-bottom: 110px">
+        <div style="margin-bottom: 50px">
             <!-- Start: Full Page Form -->
             <div class="container-fluid">
 		    
@@ -290,7 +290,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
             </div>
 	
 	<div class="info">
-                       Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries
+                       Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries<br>
                      </div>
 	
         </div>
