--- a/index.html
+++ b/index.html
@@ -289,11 +289,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
                 </form>
             </div>
 	
-	<div class="info">
-                       Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries<br>
+	<div class="info"><center>
+                       Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries<br><br>
+    </center>
                      </div>
-	
-        </div>
             <!-- End: Full Page Form -->
         </div>
 </div>
