--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
 
 
 <div style="margin-top: -4px;">
-    <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top" >
+    <nav class="navbar navbar-light navbar-expand-lg bg-light">
 
         <!-- <div class="container" style=""><a class="navbar-brand" href=# style="font-family:Arial Narrow, cursive;font-size: 40px;color: #ffffff;"><img src="D:\about us\form\covid.jpg" height="70" width="70"></a> -->
 
-              <img src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo" style="display: block;margin-left: auto;margin-right: auto;width: 50%;width:80px;height:80px; ">
-        </div>
-
-    </nav>
+              
+    <img src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo" style="display: block;margin-left: auto;margin-right: 20px;width:80px;height:80px; "><img src="https://i.ibb.co/Bnq0zQr/J-C-Bose-University-of-Science-and-Technology-YMCA-logo-1.png" alt="UCC_logo" style="display: block;margin-left: 20px;margin-right: auto;width:80px;height:80px; ">
+        </nav>
 </div>
 
 
