--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 
 <div style="margin-top: -4px;">
-    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+    <nav class="navbar navbar-light navbar-expand-lg bg-light fixed-top">
 
         <!-- <div class="container" style=""><a class="navbar-brand" href=# style="font-family:Arial Narrow, cursive;font-size: 40px;color: #ffffff;"><img src="D:\about us\form\covid.jpg" height="70" width="70"></a> -->
 
@@ -141,7 +141,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(255,10,151,1) 0%, rgb
 
 
 
-
+<br><br><br>
 <div style="background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(63, 70, 107) 100%); padding: 20px; padding-top: 40px">
 <div class="container card wow slideInUp" style=" border-radius: 1%">
