--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                        1. The main motive behind this initiative by University Computer Centre And Digital Affairs Cell , YMCA Faridabad is to help the ones in need and  to provide a platform to the ones there to help.
 <br>
 2. If you are in urgent need of any accesory during this critical COVID-19 situation.
-Fill the form with Required as an option in the form.
-<br>3. If some people are there to help with any accessory or the accesory is available with them can fill the form with Available as an option in the form.
+Fill the form with <strong>Required</strong> as an option in the form.
+<br>3. If some people are there to help with any accessory or the accessory is available with them can fill the form with <strong>Available</strong> as an option in the form.
 <br>
 The service here is free of cost without any kind of fees.
 <br>
@@ -224,7 +224,7 @@ The service here is free of cost without any kind of fees.
                             </div>
                                <!-- city -->
                              <div class="form-group"><label for="id_query">Describe your Location</label><span class="required-input">*</span><textarea class="form-control" id="id_questioncity" name="question" placeholder="Please Describe Your location Here , with landmark and other informational details! " rows="3" maxlength="5000" required></textarea></div>
-                            <div class="form-group"><label for="id_query">Description</label><span class="required-input">*</span><textarea class="form-control" id="id_question" name="question" placeholder="Please Describe situation information here " rows="5" maxlength="5000" required></textarea></div>
+                            <div class="form-group"><label for="id_query">Description</label><span class="required-input">*</span><textarea class="form-control" id="id_question" name="question" placeholder="Briefly explain your situation and Requirement/Availability here." rows="5" maxlength="5000" required></textarea></div>
                             <!-- resource -->
                             <div class="form-group">
                                 <label for="id_course">Resource:</label><span class="required-input">*(Required)</span>
