--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ The service here is free of cost without any kind of fees.
                             <br>
                             <div class="form-group">
                                 <!-- Requirement -->
-                                <label for="id_course">Requirement/Availabilty</label><span class="required-input">*(Required)</span>
+                                <label for="id_course">Requirement/Availabilty आवश्यकता/उपलब्धता </label><span class="required-input">*(Required)</span>
                                 <div class="input-group">
                                     <div class="input-group-prepend"><span class="input-group-text"><i class="fa fa-trophy"></i></span>
                                         <select class="form-control" name="skills" id="id_requirement">
