--- a/index.html
+++ b/index.html
@@ -154,8 +154,17 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             them can fill the form with <strong>Available</strong> as an option in the form.
             <br>
             The service here is free of cost without any kind of fees.
+            <br><br>
+
+            1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, वाईएमसीए फरीदाबाद द्वारा इस पहल के पीछे मुख्य मकसद
+            लोगों की मदद करना और वहां के लोगों को मदद के लिए एक मंच प्रदान करना है।
             <br>
-            <br>
+            2. यदि आप इस महत्वपूर्ण COVID-19 स्थिति के दौरान किसी भी सहायक की तत्काल आवश्यकता है। फॉर्म में एक विकल्प के
+            रूप में <strong>आवश्यकता</strong> के साथ फॉर्म भरें।
+            <br>3. यदि कुछ लोग किसी एक्सेसरी की मदद करने के लिए हैं या उनके पास उपलब्ध है तो फॉर्म में विकल्प के रूप में
+            <strong>उपलब्धता</strong> फॉर्म भर सकते हैं।
+            <br>यहां सेवा बिना किसी शुल्क के मुफ्त है।
+            <br><br>
 
           </div>
           <input type="hidden" name="csrfmiddlewaretoken"
