--- a/index.html
+++ b/index.html
@@ -197,14 +197,31 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                 </div>
                 <!-- Requirement -->
               </div>
-              <div class="form-group"><label for="id_name" Type>Name नाम&nbsp;</label><span
+              <div class="form-group"><label for="id_name" Type>Patient Name मरीज़ का नाम&nbsp;</label><span
                   class="required-input">*(Required)</span>
                 <div class="input-group">
-                  <div class="input-group-prepend"><span class="input-group-text"><i
-                      class="fa fa-user-o"></i></span></div>
+                  <div class="input-group-prepend"><span class="input-group-text">
+                    <i class="fa fa-user-o"></i></span></div>
                   <input class="form-control" type="text" id="id_name" name="name" required
                          placeholder="Full Name" maxlength="50"></div>
               </div>
+
+              <div class="form-group"><label for="id_name" Type>Age उम्र&nbsp;</label>
+                <div class="input-group">
+                  <div class="input-group-prepend"><span class="input-group-text">
+                    <i class="fa fa-user-o"></i></span></div>
+                  <input class="form-control" type="number" id="id_age" name="age"
+                         placeholder="Age" max="125" min="0"></div>
+              </div>
+
+              <!-- Covid Status -->
+              <div class="form-group"><label for="id_phoneno">COVID-19 status स्थिति&nbsp;</label>
+                <select class="form-control" name="status" id="id_covid_status">
+                  <option id="covid_status_option" value="+ve (Positive)">COVID positive (+ve)</option>
+                  <option id="covid_status_option" value="-ve (Negative)">COVID negative (-ve)</option>
+                </select>
+              </div>
+
               <div class="form-group"><label for="id_email">Email ईमेल&nbsp;</label><span
                   class="required-input">*(Required)</span>
                 <div class="input-group">
@@ -219,9 +236,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                   <div class="input-group-prepend"><span class="input-group-text"><i
                       class="fa fa-phone"></i></span></div>
                   <input class="form-control" type="number" id="id_phoneno" name="phoneno" required
-                         placeholder="Primary Phone" min="6000000000" max"9999999999" >
+                         placeholder="Primary Phone" min="6000000000" max="9999999999">
                 </div>
               </div>
+
               <!-- city -->
               <div class="form-group"><label for="id_phoneno">City शहर&nbsp;</label><span
                   class="required-input">*(Required)</span>
@@ -897,6 +915,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
   });
   const submitHandler = (event) => {
 
+    var covid_status_index = document.getElementById('id_covid_status').selectedIndex
     var city_index = document.getElementById('id_city').selectedIndex
     var resource_index = document.getElementById('id_resource').selectedIndex
     var require_index = document.getElementById('id_requirement').selectedIndex
@@ -923,11 +942,14 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
 
 
     if (document.getElementById("id_name").value &&
+      (!document.getElementById("id_age").value || (parseInt(document.getElementById("id_age").value, 10) >= 0 && parseInt(document.getElementById("id_age").value, 10) <= 125)) &&
       document.getElementById('id_email').value &&
       (parseInt(document.getElementById('id_phoneno').value, 10) >= 6000000000 && parseInt(document.getElementById('id_phoneno').value, 10) <= 9999999999) && document.getElementById('id_question').value &&
       document.getElementById('id_questioncity').value) {
       // console.log(JSON.stringify({
       //   name: document.getElementById("id_name").value,
+      //   age: document.getElementById("id_age").value,
+      //   covid_status: document.getElementById("id_covid_status")[covid_status_index].value,
       //   email: document.getElementById('id_email').value,
       //   phone: document.getElementById('id_phoneno').value,
       //   city: document.getElementById("id_city")[city_index].value,
@@ -945,6 +967,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
         headers: {'Content-Type': 'application/json'},
         body: JSON.stringify({
           name: document.getElementById("id_name").value,
+          age: document.getElementById("id_age").value,
+          covid_status: document.getElementById("id_covid_status")[covid_status_index].value,
           email: document.getElementById('id_email').value,
           phone: document.getElementById('id_phoneno').value,
           city: document.getElementById("id_city")[city_index].value,
