--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                       <option id="resource_option" value="Oxygen Concentrator">Oxygen
                         Concentrator
                       </option>
+                      <option id="resource_option" value="Medicine">Medicine</option>
                       <option id="resource_option" value="Others">Others</option>
                     </select>
                   </div>
@@ -303,8 +304,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                     <div class="modal-dialog">
                       <div class="modal-content">
                         <div class="modal-header">
-<!--                          <button type="button" class="close" data-dismiss="modal"-->
-<!--                                  aria-label=""><span>×</span></button>-->
+                          <!--                          <button type="button" class="close" data-dismiss="modal"-->
+                          <!--                                  aria-label=""><span>×</span></button>-->
                         </div>
 
                         <div class="modal-body">
