--- a/index.html
+++ b/index.html
@@ -214,6 +214,14 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                          placeholder="Age" max="125" min="0"></div>
               </div>
 
+              <div class="form-group"><label for="id_name" Type>Aadhaar Number आधार नंबर&nbsp;</label>
+                <div class="input-group">
+                  <div class="input-group-prepend"><span class="input-group-text">
+                    <i class="fa fa-user-o"></i></span></div>
+                  <input class="form-control" type="number" id="id_aadhaar" name="aadhaar"
+                         placeholder="Aadhaar Number" max="999999999999" min="100000000000"></div>
+              </div>
+
               <!-- Covid Status -->
               <div class="form-group"><label for="id_phoneno">COVID-19 status स्थिति&nbsp;</label>
                 <select class="form-control" name="status" id="id_covid_status">
@@ -284,14 +292,15 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                       class="fa fa-trophy"></i></span>
                     <select class="form-control" name="skills" id="id_resource">
                       <option id="resource_option" value="Plasma">Plasma</option>
+                      <option id="resource_option" value="Home ICU / ICU Bed">Home ICU / ICU Bed</option>
                       <option id="resource_option" value="Oxygen Cylinder">Oxygen Cylinder
                       </option>
-                      <option id="resource_option" value="ICU Bed">ICU Bed</option>
                       <option id="resource_option" value="Ventilator">Ventilator</option>
                       <option id="resource_option" value="Oxygen Concentrator">Oxygen
                         Concentrator
                       </option>
                       <option id="resource_option" value="Medicine">Medicine</option>
+                      <option id="resource_option" value="Doctor for Tele-Consultation">Doctor for Tele-Consultation</option>
                       <option id="resource_option" value="Others">Others</option>
                     </select>
                   </div>
@@ -943,13 +952,15 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
 
 
     if (document.getElementById("id_name").value &&
-      (!document.getElementById("id_age").value || (parseInt(document.getElementById("id_age").value, 10) >= 0 && parseInt(document.getElementById("id_age").value, 10) <= 125)) &&
+      (parseInt(document.getElementById("id_age").value, 10) >= 0 && parseInt(document.getElementById("id_age").value, 10) <= 125) &&
+      (parseInt(document.getElementById("id_aadhaar").value, 10) >= 100000000000 && parseInt(document.getElementById("id_aadhaar").value, 10) <= 999999999999) &&
       document.getElementById('id_email').value &&
       (parseInt(document.getElementById('id_phoneno').value, 10) >= 6000000000 && parseInt(document.getElementById('id_phoneno').value, 10) <= 9999999999) && document.getElementById('id_question').value &&
       document.getElementById('id_questioncity').value) {
       // console.log(JSON.stringify({
       //   name: document.getElementById("id_name").value,
       //   age: document.getElementById("id_age").value,
+      //   aadhaar: document.getElementById("id_aadhaar").value,
       //   covid_status: document.getElementById("id_covid_status")[covid_status_index].value,
       //   email: document.getElementById('id_email').value,
       //   phone: document.getElementById('id_phoneno').value,
@@ -969,6 +980,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
         body: JSON.stringify({
           name: document.getElementById("id_name").value,
           age: document.getElementById("id_age").value,
+          aadhaar: document.getElementById("id_aadhaar").value,
           covid_status: document.getElementById("id_covid_status")[covid_status_index].value,
           email: document.getElementById('id_email').value,
           phone: document.getElementById('id_phoneno').value,
