--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
         <form id="registationForm">
           <div class="info">
             1. The main motive behind this initiative by University Computer Centre And Digital Affairs Cell
-            , YMCA Faridabad is to help the ones in need and to provide a platform to the ones there to
+            , JC Bose University of Science and Technology Faridabad is to help the ones in need and to provide a platform to the ones there to
             help.
             <br>
             2. If you are in urgent need of any accessory during this critical COVID-19 situation.
@@ -156,7 +156,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             The service here is free of cost without any kind of fees.
             <br><br>
 
-            1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, वाईएमसीए फरीदाबाद द्वारा इस पहल के पीछे मुख्य मकसद
+            1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, जेसी बोस यूनिवर्सिटी ऑफ साइंस ऐण्ड टेक्नोलॉजी फरीदाबाद द्वारा इस पहल के पीछे मुख्य मकसद
             लोगों की मदद करना और वहां के लोगों को मदद के लिए एक मंच प्रदान करना है।
             <br>
             2. यदि आप इस महत्वपूर्ण COVID-19 स्थिति के दौरान किसी भी सहायक की तत्काल आवश्यकता है। फॉर्म में एक विकल्प के
