--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
     <!-- <div class="container" style=""><a class="navbar-brand" href=# style="font-family:Arial Narrow, cursive;font-size: 40px;color: #ffffff;"><img src="D:\about us\form\covid.jpg" height="70" width="70"></a> -->
 
 
-    <img src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo"
-         style="display: block;margin-left: auto;margin-right: 20px;width:80px;height:80px; "><img
-      src="https://i.ibb.co/Bnq0zQr/J-C-Bose-University-of-Science-and-Technology-YMCA-logo-1.png" alt="UCC_logo"
+    <img src="https://i.ibb.co/Bnq0zQr/J-C-Bose-University-of-Science-and-Technology-YMCA-logo-1.png" alt="UST_logo"
+         style="display: block;margin-left: auto;margin-right: 20px;width:80px;height:80px; ">
+    <img
+      src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo"
       style="display: block;margin-left: 20px;margin-right: auto;width:80px;height:80px; ">
   </nav>
 </div>
@@ -135,9 +136,16 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
       <!-- Start: Full Page Form -->
       <div class="container-fluid">
 
+<!--        <div class="info">-->
+<!--          <br><strong>Note :- </strong> Person cannot donate blood for the next 28 days after taking the last-->
+<!--          dose of COVID-19 vaccine.<br>-->
+<!--        </div>-->
+
         <div class="info">
-          <br><strong>Note :- </strong> Person cannot donate blood for the next 28 days after taking the last
-          dose of COVID-19 vaccine.<br>
+          <br><strong>Please Note :- </strong>This initiative is meant to provide assistantship to COVID Patients. The
+          data is taken from sources and verified to a certain extent. It is advised to kindly ensure the contact number
+          and address personally while making any payment. The University is not liable for any compensation in case of
+          fraud or scam.<br>
         </div>
 
         <h1 class="text-center" style="margin-top: 40px;margin-bottom: 40px;">Covid-19 HelpDesk</h1>
@@ -145,7 +153,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
         <form id="registationForm">
           <div class="info">
             1. The main motive behind this initiative by University Computer Centre And Digital Affairs Cell
-            , JC Bose University of Science and Technology Faridabad is to help the ones in need and to provide a platform to the ones there to
+            , JC Bose University of Science and Technology Faridabad is to help the ones in need and to provide a
+            platform to the ones there to
             help.
             <br>
             2. If you are in urgent need of any accessory during this critical COVID-19 situation.
@@ -156,7 +165,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             The service here is free of cost without any kind of fees.
             <br><br>
 
-            1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, जेसी बोस यूनिवर्सिटी ऑफ साइंस ऐण्ड टेक्नोलॉजी फरीदाबाद द्वारा इस पहल के पीछे मुख्य मकसद
+            1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, जेसी बोस यूनिवर्सिटी ऑफ साइंस ऐण्ड टेक्नोलॉजी फरीदाबाद
+            द्वारा इस पहल के पीछे मुख्य मकसद
             लोगों की मदद करना और वहां के लोगों को मदद के लिए एक मंच प्रदान करना है।
             <br>
             2. यदि आप इस महत्वपूर्ण COVID-19 स्थिति के दौरान किसी भी सहायक की तत्काल आवश्यकता है। फॉर्म में एक विकल्प के
@@ -300,7 +310,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                         Concentrator
                       </option>
                       <option id="resource_option" value="Medicine">Medicine</option>
-                      <option id="resource_option" value="Doctor for Tele-Consultation">Doctor for Tele-Consultation</option>
+                      <option id="resource_option" value="Doctor for Tele-Consultation">Doctor for Tele-Consultation
+                      </option>
                       <option id="resource_option" value="Others">Others</option>
                     </select>
                   </div>
@@ -326,6 +337,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                             <h1>Thank You!</h1>
                             <p>Your submission is received. We will contact you through mail
                               soon.<br>Please check your mailbox regularly.</p>
+
+                            <p>Please Note: This initiative is meant to provide assistantship to COVID Patients. The
+                              data is taken from sources and verified to a certain extent. It is advised to kindly
+                              ensure the contact number and address personally while making any payment. The University
+                              is not liable for any compensation in case of fraud or scam.</p>
+
                             <p>STAY HOME - STAY SAFE !</p>
 
 
