--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <img src="https://i.ibb.co/Bnq0zQr/J-C-Bose-University-of-Science-and-Technology-YMCA-logo-1.png" alt="UST_logo"
          style="display: block;margin-left: auto;margin-right: 20px;width:80px;height:80px; ">
     <img
-      src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo"
-      style="display: block;margin-left: 20px;margin-right: auto;width:80px;height:80px; ">
+        src="https://i.ibb.co/y09j9qb/uccda.png" alt="UCC_logo"
+        style="display: block;margin-left: 20px;margin-right: auto;width:80px;height:80px; ">
   </nav>
 </div>
 
@@ -135,11 +135,6 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
     <div style="margin-bottom: 50px">
       <!-- Start: Full Page Form -->
       <div class="container-fluid">
-
-<!--        <div class="info">-->
-<!--          <br><strong>Note :- </strong> Person cannot donate blood for the next 28 days after taking the last-->
-<!--          dose of COVID-19 vaccine.<br>-->
-<!--        </div>-->
 
         <div class="info">
           <br><strong>Please Note :- </strong>This initiative is meant to provide assistantship to COVID Patients. The
@@ -370,8 +365,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
               <hr class="d-flex d-md-none">
             </div>
           </div>
-      </div>
       </form>
+      </div>
     </div>
 
     <div class="info">
@@ -379,6 +374,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 0%, rgb(rgb(1
         Contact <a href="mailto:covid.helpdesk.ymca@gmail.com">covid.helpdesk.ymca@gmail.com</a> for any queries<br><br>
       </center>
     </div>
+
+    <div class="info">
+      <strong>Note :- </strong> Person cannot donate blood for the next 28 days after taking the last
+      dose of COVID-19 vaccine.<br><br>
+    </div>
+
     <!-- End: Full Page Form -->
   </div>
 </div>
