--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             Fill the form with <strong>Required</strong> as an option in the form.
             <br>3. If some people are there to help with any accessory or the accessory is available with
             them can fill the form with <strong>Available</strong> as an option in the form.
-            <br>4. For oxygen refilling in Faridabad, you may refer to the <a href="https://bit.ly/3nZC7JJ">District
-            Administration Faridabad website</a>.
+            <br>4. For oxygen refilling in Faridabad, you may refer to the
+            <a href="https://bit.ly/3nZC7JJ" target="_blank">District Administration Faridabad website</a>.
             <br>5. If any individual wants to donate PLASMA, they may fill the following form <a
-              href="https://tinyurl.com/PlasmaDonorsJCBUST">tinyurl.com/PlasmaDonorsJCBUST</a>
+              href="https://tinyurl.com/PlasmaDonorsJCBUST" target="_blank">tinyurl.com/PlasmaDonorsJCBUST</a>
             <br>
             The service here is free of cost without any kind of fees.
             <br><br>
@@ -172,10 +172,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             रूप में <strong>आवश्यकता</strong> के साथ फॉर्म भरें।
             <br>3. यदि कुछ लोग किसी एक्सेसरी की मदद करने के लिए हैं या उनके पास उपलब्ध है तो फॉर्म में विकल्प के रूप में
             <strong>उपलब्धता</strong> फॉर्म भर सकते हैं।
-            <br>4. फरीदाबाद में ऑक्सीजन रिफिलिंग के लिए, आप <a href="https://bit.ly/3nZC7JJ">जिला प्रशासन फरीदाबाद</a>
-            की वेबसाइट देखें।
-            <br>5. यदि कोई व्यक्ति PLASMA दान करना चाहता है, तो वे निम्नलिखित फॉर्म भर सकते हैं <a
-              href="https://tinyurl.com/PlasmaDonorsJCBUST">tinyurl.com/PlasmaDonorsJCBUST</a>
+            <br>4. फरीदाबाद में ऑक्सीजन रिफिलिंग के लिए
+            <a href="https://bit.ly/3nZC7JJ" target="_blank">जिला प्रशासन फरीदाबाद</a> की वेबसाइट देखें।
+            <br>5. यदि कोई व्यक्ति PLASMA दान करना चाहता है, तो वे निम्नलिखित फॉर्म भर सकते हैं
+            <a href="https://tinyurl.com/PlasmaDonorsJCBUST" target="_blank">tinyurl.com/PlasmaDonorsJCBUST</a>
             <br>यहां सेवा बिना किसी शुल्क के मुफ्त है।
             <br><br>
 
