added tnc and privacy policy

--- a/index.html
+++ b/index.html
@@ -158,10 +158,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             them can fill the form with <strong>Available</strong> as an option in the form.
             <br>4. For oxygen refilling in Faridabad, you may refer to the
             <a href="https://bit.ly/3nZC7JJ" target="_blank">District Administration Faridabad website</a>.
-            <br>5. If any individual wants to donate PLASMA, they may fill the following form <a
-              href="https://tinyurl.com/PlasmaDonorsJCBUST" target="_blank">tinyurl.com/PlasmaDonorsJCBUST</a>
             <br>
             The service here is free of cost without any kind of fees.
+            <br><br>
+
+            By using this app, you agree to our <a href="./terms_and_conditions.html">Terms and Conditions</a> and <a
+              href="./privacy_policy.html">Privacy Policy</a>.
             <br><br>
 
             1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, जेसी बोस यूनिवर्सिटी ऑफ साइंस ऐण्ड टेक्नोलॉजी फरीदाबाद
@@ -174,8 +176,6 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             <strong>उपलब्धता</strong> फॉर्म भर सकते हैं।
             <br>4. फरीदाबाद में ऑक्सीजन रिफिलिंग के लिए
             <a href="https://bit.ly/3nZC7JJ" target="_blank">जिला प्रशासन फरीदाबाद</a> की वेबसाइट देखें।
-            <br>5. यदि कोई व्यक्ति PLASMA दान करना चाहता है, तो वे निम्नलिखित फॉर्म भर सकते हैं
-            <a href="https://tinyurl.com/PlasmaDonorsJCBUST" target="_blank">tinyurl.com/PlasmaDonorsJCBUST</a>
             <br>यहां सेवा बिना किसी शुल्क के मुफ्त है।
             <br><br>
 
