added tnc and privacy policy

--- a/index.html
+++ b/index.html
@@ -179,6 +179,10 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             <br>यहां सेवा बिना किसी शुल्क के मुफ्त है।
             <br><br>
 
+            इस ऐप का उपयोग करके, आप हमारे <a href="./terms_and_conditions.html">नियमों और शर्तों</a> और <a
+              href="./privacy_policy.html">गोपनीयता नीति</a> से सहमत होते हैं।
+            <br><br>
+
           </div>
           <input type="hidden" name="csrfmiddlewaretoken"
                  value="cDnk01DeRbuDC098XbJvNqEIFqUKi6vrddwsPAhUmUcsfwM8hpWH6SKoI0FgSWPr">
@@ -191,13 +195,14 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
           <div class="form-row">
             <div class="col-12 col-md-6" id="message">
               <h2 class="h4"> Contact Information <small><small
-                  class="required-input">&nbsp;&nbsp;&nbsp;(*required)</small></small>
+                  class="required-input"></small></small>
               </h2>
               <br>
               <div class="form-group">
                 <!-- Requirement -->
-                <label for="id_course">Requirement/Availabilty आवश्यकता/उपलब्धता &nbsp;</label><span
-                  class="required-input">*(Required)</span>
+                <label for="id_course">Requirement/Availabilty आवश्यकता/उपलब्धता</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text"><i
                       class="fa fa-trophy"></i></span>
@@ -210,8 +215,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                 </div>
                 <!-- Requirement -->
               </div>
-              <div class="form-group"><label for="id_name" Type>Patient Name मरीज़ का नाम&nbsp;</label><span
-                  class="required-input">*(Required)</span>
+              <div class="form-group"><label for="id_name" Type>Patient Name मरीज़ का नाम</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text">
                     <i class="fa fa-user-o"></i></span></div>
@@ -219,7 +225,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                          placeholder="Full Name" maxlength="50"></div>
               </div>
 
-              <div class="form-group"><label for="id_name" Type>Age उम्र&nbsp;</label>
+              <div class="form-group"><label for="id_name" Type>Age उम्र</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text">
                     <i class="fa fa-user-o"></i></span></div>
@@ -227,7 +235,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                          placeholder="Age" max="125" min="0"></div>
               </div>
 
-              <div class="form-group"><label for="id_name" Type>Aadhaar Number आधार नंबर&nbsp;</label>
+              <div class="form-group"><label for="id_name" Type>Aadhaar Number आधार नंबर</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text">
                     <i class="fa fa-user-o"></i></span></div>
@@ -236,23 +246,28 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
               </div>
 
               <!-- Covid Status -->
-              <div class="form-group"><label for="id_phoneno">COVID-19 status स्थिति&nbsp;</label>
+              <div class="form-group"><label for="id_phoneno">COVID-19 status स्थिति</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <select class="form-control" name="status" id="id_covid_status">
                   <option id="covid_status_option" value="+ve (Positive)">COVID positive (+ve)</option>
                   <option id="covid_status_option" value="-ve (Negative)">COVID negative (-ve)</option>
                 </select>
               </div>
 
-              <div class="form-group"><label for="id_email">Email ईमेल&nbsp;</label><span
-                  class="required-input">*(Required)</span>
+              <div class="form-group"><label for="id_email">Email ईमेल</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text"><i
                       class="fa fa-envelope-o"></i></span></div>
                   <input class="form-control" type="email" id="id_email" name="email" required
                          placeholder="Email Address" maxlength="254"></div>
               </div>
-              <div class="form-group"><label for="id_phoneno">Phone Number फ़ोन नंबर&nbsp;</label><span
-                  class="required-input">*(Required)</span>
+
+              <div class="form-group"><label for="id_phoneno">Phone Number फ़ोन नंबर</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text"><i
                       class="fa fa-phone"></i></span></div>
@@ -262,8 +277,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
               </div>
 
               <!-- city -->
-              <div class="form-group"><label for="id_phoneno">City शहर&nbsp;</label><span
-                  class="required-input">*(Required)</span>
+              <div class="form-group"><label for="id_phoneno">City शहर</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <select class="form-control" name="skills" id="id_city">
                   <option id="city_option" value="Delhi">Delhi</option>
                   <option id="city_option" value="Sonipat">Sonipat</option>
@@ -280,16 +296,22 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
               </div>
               <!-- city -->
               <div class="form-group"><label for="id_query">Describe your Location अपने स्थान का वर्णन
-                करें&nbsp;</label><span class="required-input">*</span><textarea class="form-control"
-                                                                                 id="id_questioncity"
-                                                                                 name="question"
-                                                                                 placeholder="Please Describe Your location Here , with landmark and other informational details! "
-                                                                                 rows="3"
-                                                                                 maxlength="5000"
-                                                                                 required></textarea>
+                करें</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
+                <textarea class="form-control"
+                          id="id_questioncity"
+                          name="question"
+                          placeholder="Please Describe Your location Here , with landmark and other informational details! "
+                          rows="3"
+                          maxlength="5000"
+                          required></textarea>
               </div>
               <div class="form-group"><label for="id_query">Description अपनी स्थिति का वर्णन
-                करें&nbsp;</label><span class="required-input">*</span><textarea class="form-control"
+                करें</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
+                <textarea class="form-control"
                                                                                  id="id_question"
                                                                                  name="question"
                                                                                  placeholder="Briefly explain your situation and Requirement/Availability here."
@@ -299,7 +321,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
               </div>
               <!-- resource -->
               <div class="form-group">
-                <label for="id_course">Resource संसाधन:&nbsp;</label><span class="required-input">*(Required)</span>
+                <label for="id_course">Resource संसाधन:</label>
+                <span class="required-input">&nbsp;&nbsp;*(Required)</span>
+
                 <div class="input-group">
                   <div class="input-group-prepend"><span class="input-group-text"><i
                       class="fa fa-trophy"></i></span>
