tnc and privacy policy open in new tab

--- a/index.html
+++ b/index.html
@@ -162,8 +162,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             The service here is free of cost without any kind of fees.
             <br><br>
 
-            By using this app, you agree to our <a href="./terms_and_conditions.html">Terms and Conditions</a> and <a
-              href="./privacy_policy.html">Privacy Policy</a>.
+            By using this app, you agree to our <a href="./terms_and_conditions.html" target="_blank">Terms and
+            Conditions</a> and <a
+              href="./privacy_policy.html" target="_blank">Privacy Policy</a>.
             <br><br>
 
             1. यूनिवर्सिटी कंप्यूटर सेंटर एंड डिजिटल अफेयर्स सेल, जेसी बोस यूनिवर्सिटी ऑफ साइंस ऐण्ड टेक्नोलॉजी फरीदाबाद
@@ -179,8 +180,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
             <br>यहां सेवा बिना किसी शुल्क के मुफ्त है।
             <br><br>
 
-            इस ऐप का उपयोग करके, आप हमारे <a href="./terms_and_conditions.html">नियमों और शर्तों</a> और <a
-              href="./privacy_policy.html">गोपनीयता नीति</a> से सहमत होते हैं।
+            इस ऐप का उपयोग करके, आप हमारे <a href="./terms_and_conditions.html" target="_blank">नियमों और शर्तों</a> और
+            <a
+                href="./privacy_policy.html" target="_blank">गोपनीयता नीति</a> से सहमत होते हैं।
             <br><br>
 
           </div>
@@ -312,12 +314,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 33, 136) 0%, rgb(6
                 <span class="required-input">&nbsp;&nbsp;*(Required)</span>
 
                 <textarea class="form-control"
-                                                                                 id="id_question"
-                                                                                 name="question"
-                                                                                 placeholder="Briefly explain your situation and Requirement/Availability here."
-                                                                                 rows="5"
-                                                                                 maxlength="5000"
-                                                                                 required></textarea>
+                          id="id_question"
+                          name="question"
+                          placeholder="Briefly explain your situation and Requirement/Availability here."
+                          rows="5"
+                          maxlength="5000"
+                          required></textarea>
               </div>
               <!-- resource -->
               <div class="form-group">
